attempt to solve responsiveness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
    background: #f7f7f7;
  }
 
+ .noAnimation{}
+
  #black{
    color: #000 !important
  }
